RESOLVED FIXED120780
Fix repaint issue on "paints into ancestor" filtered layers
https://bugs.webkit.org/show_bug.cgi?id=120780
Summary Fix repaint issue on "paints into ancestor" filtered layers
Simon Fraser (smfr)
Reported 2013-09-05 10:45:20 PDT
Fix repaint issue on "paints into ancestor" filtered layers
Attachments
Patch (8.01 KB, patch)
2013-09-05 10:49 PDT, Simon Fraser (smfr)
thorton: review+
Simon Fraser (smfr)
Comment 1 2013-09-05 10:49:51 PDT
Simon Fraser (smfr)
Comment 2 2013-09-05 10:50:17 PDT
Simon Fraser (smfr)
Comment 3 2013-09-05 10:56:33 PDT
Note You need to log in before you can comment on or make changes to this bug.